fix package.json name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "/color-blocks-blitz",
+  "name": "color-blocks-blitz",
   "description": "Description",
   "author": "Your Name",
   "version": "0.0.1",
